src/objects/KPIMGR_Corporate_KPI__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Performance__c</fullName>
        <label>Actual Performance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Area</label>
        <referenceTo>KPIMGR_Business_Area__c</referenceTo>
        <relationshipLabel>Corporate KPIs</relationshipLabel>
        <relationshipName>Corporate_KPIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_KPI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Corporate KPI</label>
        <referenceTo>KPIMGR_Corporate_KPI__c</referenceTo>
        <relationshipLabel>Corporate KPIs</relationshipLabel>
        <relationshipName>Corporate_KPIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KPI_End_Date__c</fullName>
        <label>KPI End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KPI_Name__c</fullName>
        <label>KPI Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Range_End_Date__c</fullName>
        <label>KPI Range End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KPI_Range_Start_Date__c</fullName>
        <label>KPI Range Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KPI_Start_Date__c</fullName>
        <label>KPI Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KPI_Value__c</fullName>
        <label>KPI Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Increments__c</fullName>
        <label>No. of Increments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Corporate KPI</label>
    <nameField>
        <displayFormat>CKPI-{00000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corporate KPIs</pluralLabel>
    <recordTypes>
        <fullName>Increment_Corporate_KPI</fullName>
        <active>true</active>
        <description>Record type for the increments of a corporate KPI</description>
        <label>Increment Corporate KPI</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_Corporate_KPI</fullName>
        <active>true</active>
        <description>Record type for the master record against a range of corporate KPIs</description>
        <label>Master Corporate KPI</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>